@@ -1,6 +1,0 @@
-# linkml_model
-This is a _copy_ of the root python files in the [linkml-model](https://linkml/linkml-model) package.
-
-We maintain this as a copy rather importing it because of a circular dependency -- linkml-model
-needs the runtime to operate and the runtime needs linkml-model.
-
