@@ -1,0 +1,3 @@
+This directory (static_linkml_model) carries a snapshot of the linkml_model python code as it appeared
+at a given point in time.  You may periodically need to copy a current image of the linkml_model 
+python packages into this directory and tweak the imports.
